testsuite/tests/grammar/invalid_enum/test.out
== bad-alt.lkt ==
bad-alt.lkt:5:37: error: Unknown enum node alternative: NoSuchAlt
5 |     @main_rule main_rule <- Example.NoSuchAlt("example")
  |                                     ^^^^^^^^^


== bad-prefix.lkt ==
bad-prefix.lkt:5:29: error: Unknown node: NoSuchNode
5 |     @main_rule main_rule <- NoSuchNode.Example1("example")
  |                             ^^^^^^^^^^


== no-dot.lkt ==
no-dot.lkt:5:29: error: Parsers cannot create abstract nodes
5 |     @main_rule main_rule <- Example("example")
  |                             ^^^^^^^^^^^^^^^^^^


== ok.lkt ==
Code generation was successful

Done
